--- a/workflow.yml
+++ b/workflow.yml
@@ -22,9 +22,9 @@ steps:
 
 - script: |
     echo "📦 Installing Ansible..."
-    sudo apt install software-properties-common
-    sudo add-apt-repository --yes --update ppa:ansible/ansible
-    sudo apt install ansible
+#    sudo apt install software-properties-common
+#    sudo add-apt-repository --yes --update ppa:ansible/ansible
+#    sudo apt install ansible -y
     ansible --version
   displayName: 'Install Ansible'
 
