--- a/workflow.yml
+++ b/workflow.yml
@@ -6,7 +6,6 @@
 trigger:
 - main
 
-
 pool:
   name: vigilx
   demands: agent.name -equals codespace-agent1
@@ -22,9 +21,9 @@ steps:
 
 - script: |
     echo "📦 Installing Ansible..."
-#   sudo apt install software-properties-common
-#   sudo add-apt-repository --yes --update ppa:ansible/ansible
-#   sudo apt install ansible -y
+    sudo apt install software-properties-common
+    sudo add-apt-repository --yes --update ppa:ansible/ansible
+    sudo apt install ansible -y
     ansible --version
   displayName: 'Install Ansible'
 
