--- a/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
+++ b/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
@@ -16,5 +16,9 @@
         address     = "0.0.0.0:8200"
         tls_disable = 1
       }
+
+      # API Address Configuration
+      api_addr = "http://127.0.0.1:8200"  
+
       disable_mlock = true
       ui = true
