--- a/ansible-configuration/playbooks/roles/vault/defaults/main.yml
+++ b/ansible-configuration/playbooks/roles/vault/defaults/main.yml
@@ -4,3 +4,4 @@ vault_install_dir: "/usr/local/bin"
 vault_data_dir: "/opt/vault/data"
 vault_config_dir: "/etc/vault.d"
 vault_config_file: "/etc/vault.d/vault.hcl"
+PRIVATE_IP: $(hostname | sed 's/ip-//; s/-/./g')
