--- a/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
+++ b/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
@@ -18,7 +18,7 @@
       }
 
       # API Address Configuration
-      api_addr = "$PRIVAYE_IP:8200"  
+      api_addr = "{{ PRIVATE_IP }}:8200"  
 
       disable_mlock = true
       ui = true
