--- a/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
+++ b/ansible-configuration/playbooks/roles/vault/tasks/configure.yml
@@ -26,7 +26,7 @@
       }
 
       # API Address Configuration
-      api_addr = "{{ PRIVATE_IP }}:8200"  
+      api_addr = "http://{{ PRIVATE_IP }}:8200"  
 
       disable_mlock = true
       ui = true
